--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -422,7 +422,7 @@ The spins of merging black holes may carry imprints of their evolutionary histor
 
 Isolated binaries, including those formed through chemically homogeneous evolution, are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011,Tauris:2017}.  Meanwhile, the spin directions for dynamically formed binaries are likely to be distributed isotropically \citep[e.g.,][]{Rodriguez:2016spin}.  On the other hand, black holes merging through the Lidov-Kozai resonance in hierarchical triples could preferentially have spins in the orbital plane \citep{LiuLai:2018,RodriguezAntonini:2018}.
 
-Spin magnitudes may also depend sensitively on evolutionary history.  A massive star may contain a large amount of angular momentum, far in excess of the maximum allowed for a spinning black hole. However, the vast majority of that angular momentum will be contained in the outer layers of the star and can therefore readily be lost through winds or via envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017}, or, less likely, during the supernova itself \citep{Batta:2017,Schroeder:2018}.   Consequently, if angular momentum transport within a star is at least moderately efficient, we may expect that the first-formed black hole in an isolated binary will always be slowly spinning, while the second-born black hole will be rapidly spinning only in the tightest binaries, when its helium star progenitor can be spun up through tides \citep{Bavera:2019,Belczynski:2020,MandelFragos:2020,Bavera:2021}.
+Spin magnitudes may also depend sensitively on evolutionary history.  A massive star may contain a large amount of angular momentum, far in excess of the maximum allowed for a spinning black hole. However, the vast majority of that angular momentum will be contained in the outer layers of the star and can therefore readily be lost through winds or via envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017}, or, less likely, during the supernova itself \citep{Batta:2017,Schroeder:2018}.   Consequently, if angular momentum transport within a star is at least moderately efficient, we may expect that the first-formed black hole in an isolated binary will always be slowly spinning, while the second-born black hole will be rapidly spinning only in the tightest binaries, when its helium star progenitor can be spun up through tides \citep{Bavera:2019,Belczynski:2020,MandelFragos:2020,Bavera:2021,OlejakBelczynski:2021}.
 
 This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}.     As discussed in section \ref{sec:XRB}, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones. Moreover, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep[][and see section \ref{environ}]{HotokezakaPiran:2017}.  In particular, black holes in high-mass X-ray binaries such as Cygnus X-1 could be spun up during mass transfer late in the primary's main sequence, when the core and envelope are still strongly coupled \citep{Qin:2018}.  Such systems may then be unlikely to produce merging black holes as they are too close to experience a common envelope and too wide to merge without one \citep{Neijssel:2020CygX1}, though some fraction could still merge through fortuitous natal kicks of the secondary, possibly explain the spin precession of GW151226 \citep[][but see \cite{GW151226,MateuLucena:2021}]{Chia:2021}.
 
@@ -442,25 +442,23 @@ The intense radiation from massive stars with luminosities $\gtrsim 10^5 L_\odot
  
 \begin{figure}
 	\centering
-	\includegraphics[width=0.5\textwidth]{BHremnantdelayed.png}
+	\includegraphics[width=0.8\textwidth]{BHremnantdelayed.png}
 	\caption{\label{fig:BHremnant} Remnant compact object mass from single stellar evolution for a given zero-age main sequence stellar mass, following the default COMPAS prescription for winds \citep{COMPAS:2021}  and the `delayed' \citet{Fryer:2012} supernova fallback prescription, at solar  (blue) and a tenth solar (red) metallicities.  
 	} 
 \end{figure}
 
 Forming heavier black holes, like those observed through gravitational waves, requires stellar progenitors born in regions with lower metallicity. The yield of merging black holes per unit star-forming mass is also greatest at lowest metallicity, due largely to the reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010,Kruckow:2018}. For the isolated binary channel, delayed stellar expansion at lower metallicity, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.
 
-The above considerations place constraints on the formation time of the systems that produced the observed merging black-hole binaries. Most low-metallicity star formation occurred in the early Universe, before the interstellar medium was polluted with metal-rich products of stellar evolution; however, a broad range of stellar metallicities is observed at all epochs  \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}. Meanwhile, population synthesis models of the classical formation channel indicate that the distribution of delay time $\tau$ between star formation and merger peaks at shorter delay times, with a $p(\tau) \propto 1/\tau$ decay.  This time delay distribution is consistent with gravitational-wave driven merger time scales for binary separations distributed as $p(a) \propto 1/a$ at the time of double black hole formation (see \autoref{sec:CErates}), but  is robust to moderate changes in separation distribution because of the very steep scaling of the delay time with separation, $\tau \propto a^4$.  (Other formation channels, particularly chemically homogeneous evolution, predict very different delay time distributions, potentially providing an additional way to discriminate between formation channels.)  A convolution of the metallicity-specific star formation history and the delay-time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the formation time of the binary star progenitor of GW150914: it either formed in the first $\sim$ Gyr after the Big Bang, with a long subsequent delay to merger \citep{Dominik:2014}, or formed more recently in a low-metallicity region such as a low-mass satellite galaxy.  
+The above considerations place constraints on the formation time of the systems that produced the observed merging black-hole binaries. Most low-metallicity star formation occurred in the early Universe, before the interstellar medium was polluted with metal-rich products of stellar evolution; however, a broad range of stellar metallicities is observed at all epochs  \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}. Meanwhile, population synthesis models of the classical formation channel indicate that the distribution of delay time $\tau$ between star formation and merger peaks at shorter delay times, with a $p(\tau) \propto 1/\tau$ decay.  This time delay distribution is consistent with gravitational-wave driven merger time scales for binary separations distributed as $p(a) \propto 1/a$ at the time of double black hole formation (see section \ref{sec:CErates}), but  is robust to moderate changes in separation distribution because of the very steep scaling of the delay time with separation, $\tau \propto a^4$.  (Other formation channels, particularly chemically homogeneous evolution, predict very different delay time distributions, potentially providing an additional way to discriminate between formation channels.)  A convolution of the metallicity-specific star formation history and the delay-time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the formation time of the binary star progenitor of GW150914: it either formed in the first $\sim$ Gyr after the Big Bang, with a long subsequent delay to merger \citep{Dominik:2014}, or formed more recently in a low-metallicity region such as a low-mass satellite galaxy.  
 
   
 
 \section{Prospects for gravitational-wave astronomy}\label{prospect}
 
-The half dozen gravitational-wave events observed to date provide limited conclusive information about the astrophysics of binary black holes and their progenitors.  Fortunately, these observations indicate a binary black hole merger rate of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104}, which points to the prospect of a few tens of detections in the next observing run and hundreds within the next three years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to inaugurate gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  In this section, we describe some of the prospects for extracting information from the growing data set of observations over the next few years, including single informative observations, population statistical inference, and theoretical modelling.
+The gravitational-wave events observed to date already provide a number of exciting insights into  the astrophysics of binary black holes and their progenitors, but many open questions remain.  Fortunately, these observations indicate a binary black hole merger rate of around $20$ Gpc$^{-3}$ yr$^{-1}$ at redshift zero with a likely higher merger rate at higher redshifts \citep{GWTC2:pop}, which points to the prospect of hundreds within the next few years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to inaugurate gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  In this section, we describe some of the prospects for extracting information from the growing data set of observations over the next few years, including single informative observations, population statistical inference, and theoretical modelling.
 
 \subsection{Individual exciting events}
-Single events that would be individually informative include the discovery of a merging binary black hole with a component mass in the pair-instability supernova mass gap.  Models of pair instability supernovae suggest that no black holes with masses between $\sim 60 M_\odot$ (possibly reduced to $\sim 45 M_\odot$ by pulsational pair instability \citep{Woosley:2017}) and $\sim 130 M_\odot$ should form as a result of stellar collapse, with black-hole formation possible only outside this mass gap \citep{Marchant:2016}.  Therefore, the discovery of a single object in this mass gap would point to either past dynamical mergers that left the merger remnant to be reused in a dense stellar environment \citep{Rodriguez:2018}, or to a theoretical failure in pair instability models. 
-
-Similarly, the discovery of a merger component with a mass between $\sim 2.1 M_\odot$ and $\sim 4.5 M_\odot$, in the range between the most massive known neutron stars and least massive black holes \citep{Ozel:2010,Farr:2011} would shed light on supernova explosion models, specifically the amount of fallback that can occur before the explosion \citep{Fryer:2012}.
+Three years ago, in an earlier version of this review, we suggested that two of the most exciting individual observations could include components in either the pair-instability supernova mass gap or the possible mass gap between neutron stars and $\gtrsim 5\, M_\odot$ black holes.  With GW190521 and GW190814, both have now been observed!
 
 Other individually exciting events could include the first confirmed discovery of an intermediate-mass black hole in the few-hundred solar-mass range, either as a merger of two such black holes \citep[e.g.,][]{AmaroSeoaneSantamaria:2009,Veitch:2015,Graff:2015} or as an intermediate-mass-ratio inspiral of a stellar-mass compact object into such a black hole \citep[e.g.,][]{Mandel:2008,Haster:2015IMRI,Haster:2016}. 
 
@@ -472,18 +470,18 @@ Although electromagnetic transients are not broadly expected to be associated wi
 
 \subsection{Population statistics}
 
-Population statistics will generally yield more information than individual events.  We can use the statistical analysis of sufficiently large observational data sets to infer bulk properties of the source population, such as the mass and spin distributions, and to search for distinct subpopulations.  We can separate the approaches to inference on the observed populations into two types: unmodelled or weakly modelled inference, and inference that relies on \ilya{specific} accurate models. 
+Population statistics will generally yield more information than individual events.  We can use the statistical analysis of sufficiently large observational data sets to infer bulk properties of the source population, such as the mass and spin distributions, and to search for distinct subpopulations.  We can separate the approaches to inference on the observed populations into two types: unmodelled or weakly modelled inference, and inference that relies on specific accurate models. 
 
-At the most basic end of weakly modelled inference is the (possibly non-parametric) reconstruction of an underlying distribution, such as the mass function of merging black holes \citep{Mandel:2010stat,BBH:O1}, while accounting for measurement uncertainties and selection effects.  For example, \citet{Fishbach:2017mass} use a weakly parameterised model to argue for the possible evidence of a mass gap due to pair-instability supernovae, while \citet{TalbotThrane:2017} discuss weakly parameterised inference on the spin distributions.  Meanwhile, the time delay between star formation and binary merger could be extracted by comparing the merger rate as a function of redshift against the star formation rate as a function of redshift \citep{Mandel:2016select}.  
+At the most basic end of weakly modelled inference is the (possibly non-parametric) reconstruction of an underlying distribution, such as the mass function of merging black holes \citep{Mandel:2010stat,BBH:O1,GWTC2:pop}, while accounting for measurement uncertainties and selection effects.  For example, \citet{Fishbach:2017mass} and \citet{Edelman:2021} explored weakly parameterised mass model to search for the presence of a mass gap due to pair-instability supernovae or an excess peak due to pulsational pair-instability supernovae, while \citet{RinaldiDelPozzo:2021} considered a completely non-parametric Dirichlet process Gaussian mixture model for the mass distribution.  Meanwhile, as discussed above, several groups investigated weakly parameterised inference on the spin distributions \citep[e.g.,][]{TalbotThrane:2017,GWTC2:pop,Callister:2021,Galaudage:2021}.  
 
-We can look for distinct subpopulations or ``clusters'' of events in the observable parameter space, in the hope of finding distinct categories corresponding to different evolutionary channels.  \citet{Mandel:2015} argued that $\sim 60$ observations would make it possible to determine whether there are distinct subpopulations of events in mass space even after allowing for the significant measurement uncertainties inherent in gravitational-wave astronomy, and \citet{Mandel:2016cluster} demonstrated the feasibility of a particular clustering technique.  Meanwhile, \citet{Farr:2018} propose classifying binary black hole mergers by spin misalignment angle into aligned and isotropically distributed subpopulations.  It is worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster: this is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to measure the relative frequencies of events in different categories.
+We can look for distinct subpopulations or ``clusters'' of events in the observable parameter space, in the hope of finding distinct categories corresponding to different evolutionary channels.  \citet{Mandel:2015} argued that $\sim 60$ observations would make it possible to determine whether there are distinct subpopulations of events in mass space even after allowing for the significant measurement uncertainties inherent in gravitational-wave astronomy, and \citet{Mandel:2016cluster} demonstrated the feasibility of a particular clustering technique.  Meanwhile, \citet{Farr:2018} propose classifying binary black hole mergers by spin misalignment angle into aligned and isotropically distributed subpopulations.  It is worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster, which is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to measure the relative frequencies of events in different categories.
 
-The next level of population-based inference relies on assuming that precise, possibly parameterised, subpopulation distributions are known.  In this case, hierarchical modeling \citep[extreme deconvolution in the language of][]{Hogg:2010} can be used to simultaneously determine the ratios of different subpopulations (e.g., arising from different formation channels) and any free parameters in the subpopulation models.  \citet{Zevin:2017} found that with $\sim 100$ observations, the mass distribution alone could be used to determine the formation channel, assuming the availability of trustworthy models of the mass distribution under different formation channels.  \citet{Vitale:2015} and \citet{Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels \ilya{and measure their branching ratios} through hierarchical modelling --- again, if the distributions under different channels are known \citep{Stevenson:2017spin}.  
+The next level of population-based inference relies on assuming that precise, possibly parameterised, subpopulation distributions are known.  In this case, hierarchical modelling \citep[extreme deconvolution in the language of][]{Hogg:2010} can be used to simultaneously determine the ratios of different subpopulations (e.g., arising from different formation channels) and any free parameters in the subpopulation models.  \citet{Zevin:2017} found that with $\sim 100$ observations, the mass distribution alone could be used to determine the formation channel, assuming the availability of trustworthy models of the mass distribution under different formation channels.  \citet{Vitale:2015} and \citet{Stevenson:2017spin} carried out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels and measure their branching ratios through hierarchical modelling --- again, if the distributions under different channels are known \citep{Stevenson:2017spin}.   On the other hand, more precise models increase the risk of misleading results through model misspecification.
 
 \subsection{The future of population synthesis techniques}
-There is, of course, a multitude of uncertain physics within any given model, both limiting the usefulness of approaches that rely on a precise knowledge of subpopulation distributions and, more importantly, providing a set of key science questions that we would like to answer with the aid of gravitational-wave observations.  How much mass do stars lose in winds, and what is the precise impact of metallicity and rotation on stellar evolution \citep[e.g.,][]{Renzo:2017}?  What happens to the star's angular momentum during collapse, how much mass is ejected, and how much of an asymmetric kick does the remnant receive \citep[e.g.,][]{Mirabel:2016}? How conservative is mass transfer in binaries, and how much angular momentum is carried away by the mass lost from the binary during non-conservative mass transfer \citep[e.g.,][]{vandenHeuvel:2017,Kruckow:2018}?  What are the conditions for the onset of a common-envelope phase and common envelope ejection, and how does the binary change in the process \citep[e.g.,][]{Ivanova:2013,Kruckow:2016}?   How do dynamical interactions affect binary evolution?  And, in turn, how do massive stellar binaries and their compact remnants feed back into astrophysics and cosmology on all scales?
+There is, of course, a multitude of uncertain physics within any given model, both limiting the usefulness of approaches that rely on a precise knowledge of subpopulation distributions and, more importantly, providing a set of key science questions that we would like to answer with the aid of gravitational-wave observations.  How much mass do stars lose in winds, and what exactly is the impact of metallicity and rotation on stellar evolution?  What happens to the star's angular momentum during collapse, how much mass is ejected, and how much of an asymmetric kick does the remnant receive? How conservative is mass transfer in binaries, and how much angular momentum is carried away by the mass lost from the binary during non-conservative mass transfer?  What are the conditions for the onset of a common-envelope phase and common envelope ejection, and how does the binary change in the process?   How do dynamical interactions affect binary evolution?  And, in turn, how do massive stellar binaries and their compact remnants feed back into astrophysics and cosmology on all scales?
 
-One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to parametrise the uncertain physics and predict the expected source rates and distributions under different models.  Most efforts to date have relied on a discrete set of a few models in the parameter space of population synthesis assumptions \citep[e.g.,][]{Dominik:2012,Stevenson:2015}.  Even with the low computational cost of population synthesis, it is not feasible to explore more than a few tens to a few hundred models, and this is not sufficient to cover the full parameter space or to consider the correlations between model parameters.  However, recent successes in building accurate and computationally efficient emulators over the model parameter space \citep{Barrett:2017} suggest that a full exploration of this space will soon be possible. \citet{Barrett:2017FIM} applied Fisher information matrix techniques to the space of model parameters and found that parameters such as those describing mass loss rates during the Wolf-Rayet and luminous blue variable phases of evolution, and common\ilya{-}envelope energetics, can be measured to the level of a few percent with a thousand detections. 
+One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to parametrise the uncertain physics and predict the expected source rates and distributions under different models.  Most efforts to date have relied on a discrete set of a few models in the parameter space of population synthesis assumptions \citep[e.g.,][]{Dominik:2012,Stevenson:2015}.  Even with the low computational cost of population synthesis, it is not feasible to explore more than a few tens to a few hundred models, and this is not sufficient to cover the full parameter space or to consider the correlations between model parameters.  However, recent successes in building accurate and computationally efficient emulators over the model parameter space \citep{Barrett:2017,TaylorGerosa:2018,Wong:2020,Lin:2021} suggest that a full exploration of this space will soon be possible. For example, \citet{Barrett:2017FIM} applied Fisher information matrix techniques to the space of model parameters and found that parameters such as those describing mass loss rates during the Wolf-Rayet and luminous blue variable phases of evolution, and common-envelope energetics, can be measured to the level of a few percent with a thousand detections. 
 
 \subsection{Other datasets and future missions}
 Additional observational datasets will further aid in interpreting gravitational-wave observations and in refining models of binary stellar evolution.
@@ -494,9 +492,9 @@ Ultimately, the most useful constraints are likely to come from the requirement 
 
 \subsection{Outlook}
 
-Today we have a half-dozen observations of merging binary black holes.  That is a half-dozen more than three years ago, and we have already learned a great deal.  Binary black holes exist. They merge. They do so relatively frequently.  They have a broad range of masses, and none of the sources seen so far seem to have rapid net spins in the direction of the orbital angular momentum.  We also have several plausible evolutionary channels, some of which appear to explain many of the observed properties (merger rates and masses). Black\ilya{-}hole spins continue to present something of a puzzle, particularly in light of the claimed high spins in a few high-mass black-hole X-ray binaries.
+Today we have nearly 50 observations of merging binary black holes.  That is 50 more than 6 years ago, and we have already learned a great deal.  Binary black holes exist. They merge. They do so relatively frequently.  They have a broad range of masses. None of the sources seen so far seem to have rapid net spins in the direction opposite to the orbital angular momentum.  We also have several plausible evolutionary channels, some of which appear to explain many of the observed properties: merger rates, masses, and possibly spins. 
 
-At the same time, we have the tools in place to create detailed models of stellar and binary evolution and of dynamical interactions under a variety of parameterisable assumptions.  The statistical techniques for analysing the data and inferring properties directly from the observations, or by comparison with the detailed models, are in place.  Most importantly, we have wonderful detectors which are continuing to improve, and we expect to obtain enough data in the next few years to carry out these analyses.  Perhaps in a few years we will know that all of the channels described here contribute non-negligibly to binary black hole formation; that black holes receive small kicks at birth; and that they spin slowly in merging binaries. We may also have made the first detections of new objects such as $200 M_\odot$ intermediate-mass black holes.
+At the same time, we have the tools in place to create detailed models of stellar and binary evolution and of dynamical interactions under a variety of parameterisable assumptions.  The statistical techniques for analysing the data and inferring properties directly from the observations, or by comparison with the detailed models, are in place.  Most importantly, we have wonderful detectors which are continuing to improve, and we expect to obtain enough data in the next few years to carry out these analyses.  Perhaps in a few years we will know that all of the channels described here contribute non-negligibly to binary black hole formation; that black holes receive small kicks at birth; and that they spin slowly in merging binaries except when stripped helium stars are spun up through tides. We may also have made the first detections of new objects such as $200 M_\odot$ intermediate-mass black holes.
 
 The future of gravitational-wave astronomy holds the thrilling prospect of addressing the inverse problem of massive binary stellar evolution: inferring the formation channels and their physics from observations of the merging compact-object binary population.  Like a palaeontologist who uses her knowledge of anatomy to determine the appearance, eating habits, and even behaviour of extinct dinosaurs from their fossilised remnants, we can now use merging black holes --- remnants of massive stars --- to probe the behaviour of those stars, and particularly their evolution in binaries.
 
