--- a/Mandel.bib
+++ b/Mandel.bib
@@ -30966,3 +30966,54 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2019PhRvD.100d3027R},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Edelman:2021,
+       author = {{Edelman}, Bruce and {Doctor}, Zoheyr and {Godfrey}, Jaxen and {Farr}, Ben},
+        title = "{Ain't No Mountain High Enough: Semi-Parametric Modeling of LIGO-Virgos Binary Black Hole Mass Distribution}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2021,
+        month = sep,
+          eid = {arXiv:2109.06137},
+        pages = {arXiv:2109.06137},
+archivePrefix = {arXiv},
+       eprint = {2109.06137},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210906137E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{RinaldiDelPozzo:2021,
+       author = {{Rinaldi}, Stefano and {Del Pozzo}, Walter},
+        title = "{(H)DPGMM: A Hierarchy of Dirichlet Process Gaussian Mixture Models for the inference of the black hole mass function}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2021,
+        month = sep,
+          eid = {arXiv:2109.05960},
+        pages = {arXiv:2109.05960},
+archivePrefix = {arXiv},
+       eprint = {2109.05960},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210905960R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Wong:2020,
+       author = {{Wong}, Kaze W.~K. and {Contardo}, Gabriella and {Ho}, Shirley},
+        title = "{Gravitational-wave population inference with deep flow-based generative network}",
+      journal = {\prd},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = 2020,
+        month = jun,
+       volume = {101},
+       number = {12},
+          eid = {123005},
+        pages = {123005},
+          doi = {10.1103/PhysRevD.101.123005},
+archivePrefix = {arXiv},
+       eprint = {2002.09491},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020PhRvD.101l3005W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
