--- a/Mandel.bib
+++ b/Mandel.bib
@@ -31017,3 +31017,22 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2020PhRvD.101l3005W},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@INPROCEEDINGS{Middleton:2016,
+       author = {{Middleton}, M.},
+        title = "{Black Hole Spin: Theory and Observation}",
+     keywords = {Physics, Astrophysics - High Energy Astrophysical Phenomena},
+    booktitle = {Astrophysics of Black Holes: From Fundamental Aspects to Latest Developments},
+         year = 2016,
+       editor = {{Bambi}, Cosimo},
+       series = {Astrophysics and Space Science Library},
+       volume = {440},
+        month = jan,
+        pages = {99},
+          doi = {10.1007/978-3-662-52859-4\_3},
+archivePrefix = {arXiv},
+       eprint = {1507.06153},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ASSL..440...99M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
