--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -164,7 +164,7 @@ The masses of the black-hole binaries observed to date are shown in figure \ref{
 \begin{figure}
 	\centering
 	\includegraphics[width=0.99\textwidth]{Graveyard.png}
-	\caption{The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources and reported in the GWTC-2 catalog (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the merging double neutron stars GW170817 and GW190425 (orange) appear at the bottom of the figure.  Merger product masses are shown for gravitational-wave detections. Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Aaron Geller, Northwestern University and LIGO-Virgo collaborations.}\label{fig:BHmasses} 
+	\caption{The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources and reported in the GWTC-2 catalog (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the neutron star candidates in merging compact binaries (orange) appear at the bottom of the figure.  Merger product masses are shown for gravitational-wave detections. Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Aaron Geller, Northwestern University and LIGO-Virgo collaborations.}\label{fig:BHmasses} 
 \end{figure}
 
 \textbf{Masses:} The individual black-hole masses span a range from $\simeq 2.6 M_\odot$ (assuming the lower-mass object in GW190814 is a black hole rather than a neutron star) to $\simeq 80 M_\odot$ for GW190521 (or more, see \cite{FishbachHolz:2020,NitzCapano:2021}).  There is a significant selection bias  toward detecting more massive systems, because sensitivity to gravitational waves from binary mergers depends on the system mass.  The gravitational-wave amplitude, and hence the maximum (horizon) distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals. The surveyed volume therefore scales as $M_c^{2.5}$.  Once selection effects are accounted for, the mass distribution for the more massive black hole appears to be consistent with a power-law $p(M) \propto M^{-2.6}$, reminiscent of the stellar initial mass function \citep{Salpeter:1955}, with an additional peak at around $33 M_\odot$.  The vast majority of merging binary black holes, $\approx 97\%$, have both companion masses below $45 M_\odot$ \citep{GWTC2:pop}.   
